# Kronos3D

./: .gitignore  gradlew  settings.gradle.kts
.github/workflows/: android.yml
_temp/: build.gradle
app/: build.gradle.kts  debug.keystore  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/core/cycles/: kernel_types.cpp  kernel_types.h
app/src/main/cpp/core/math/: blenlib.h  bounds.cpp  bounds.h  bvh.cpp  bvh.h  matrix.cpp  matrix.h  noise.cpp  noise.h  vector.cpp  vector.h
app/src/main/cpp/core/mesh/: bmesh.cpp  bmesh.h  subdiv.cpp  subdiv.h
app/src/main/cpp/core/modifiers/: modifier.cpp  modifier.h
app/src/main/cpp/jni/: NativeEngine.cpp  NativeEngine.h
app/src/main/cpp/opengl/: renderer.cpp  renderer.h
app/src/main/cpp/vulkan/: renderer.cpp  renderer.h
app/src/main/java/com/kronos3d/: MainActivity.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
gradle/wrapper/: gradle-wrapper.properties
